First sweater commit.

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,3 +1,33 @@
 body {
     color: #113;
 }
+.heart {
+     cursor: pointer;
+     height: 80px;
+     width: 80px;
+     background-image:url( 'https://abs.twimg.com/a/1446542199/img/t1/web_heart_animation.png');
+     background-position: left;
+     background-repeat:no-repeat;
+     background-size:2900%;
+     border: 0;
+     backface-visibility: hidden;
+     border-radius: 50%;
+     background-color:  #F7F7F7;
+ }
+.likes{
+  display: inline-block;
+
+}
+.heart:hover {
+    background-position:right;
+    border: 0;
+}
+
+.is_animating {
+    animation: heart-burst .8s steps(28) 1;
+}
+
+@keyframes heart-burst {
+    from {background-position:left;}
+    to { background-position:right;}
+}
